<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddActivity"
    tools:showIn="@layout/activity_add">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etGameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGameTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/materialCardTitle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etGamePlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etGameTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGamePlatformText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/materialCardPlatform" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etGameDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_radius"
                app:layout_constraintEnd_toStartOf="@+id/etGameMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etGamePlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGameDayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/materialCardDay" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etGameMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_radius"
                app:layout_constraintEnd_toStartOf="@+id/etGameYear"
                app:layout_constraintStart_toEndOf="@+id/etGameDay"
                app:layout_constraintTop_toBottomOf="@+id/etGamePlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGameMonthText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/materialCardMonth" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etGameYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etGameMonth"
                app:layout_constraintTop_toBottomOf="@+id/etGamePlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGameYearText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/materialCardYear" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>